--- a/src/styles/Contact.module.scss
+++ b/src/styles/Contact.module.scss
@@ -60,7 +60,7 @@
     align-items: center;
     gap: 0.4rem;
     border-radius: 10px;
-    color: #fff;
+    color: var(--color-darker);
     padding: 1.1rem 1.8rem;
     border: 2px solid transparent;
     font-size: 0.9rem;
@@ -71,6 +71,10 @@
     background: var(--color-gradient-1);
     margin-bottom: 1rem;
     cursor: pointer;
+    &:hover {
+      background: var(--color-gray-100);
+      color: var(--color-darkest);
+    }
   }
   @media screen and (max-width: 768px) {
     width: 100%;
