--- a/src/styles/Footer.module.scss
+++ b/src/styles/Footer.module.scss
@@ -101,7 +101,7 @@
         align-items: center;
         gap: 0.4rem;
         border-radius: 10px;
-        color: #fff;
+        color: var(--color-darker);
         padding: 1.1rem 1.8rem;
         border: 2px solid transparent;
         font-size: 0.9rem;
@@ -110,6 +110,11 @@
         text-align: center;
         background: var(--color-gradient-1);
         margin-bottom: 1rem;
+
+        &:hover {
+          background: var(--color-gray-100);
+          color: var(--color-darkest);
+        }
       }
     }
   }
