--- a/src/styles/Intro.module.scss
+++ b/src/styles/Intro.module.scss
@@ -89,22 +89,25 @@
       }
       .customer {
         background: var(--color-gradient-1);
-        color: white;
+        color: var(--color-darker);
         &:hover {
-          box-shadow: 0px 0px 10px 6px rgba(251, 83, 67, 0.7);
-          -webkit-box-shadow: 0px 0px 10px 6px rgba(251, 83, 67, 0.7);
-          -moz-box-shadow: 0px 0px 10px 6px rgba(251, 83, 67, 0.7);
+          background: var(--color-gray-100);
+          color: var(--color-darkest);
+
+          // box-shadow: 0px 0px 10px 6px rgba(251, 83, 67, 0.7);
+          // -webkit-box-shadow: 0px 0px 10px 6px rgba(231, 219, 218, 0.7);
+          // -moz-box-shadow: 0px 0px 10px 6px rgba(37, 37, 37, 0.7);
         }
       }
       .contact {
-        color: var(--color-white);
-        border-color: var(--color-gray-200);
+        color: var(--color-gray-100);
+        border-color: var(--color-gray-100);
         &:hover {
-          border-color: transparent;
-          background: rgba(251, 83, 67, 0.7);
-          box-shadow: 0px 0px 10px 6px rgba(251, 83, 67, 0.7);
-          -webkit-box-shadow: 0px 0px 10px 6px rgba(251, 83, 67, 0.7);
-          -moz-box-shadow: 0px 0px 10px 6px rgba(251, 83, 67, 0.7);
+          // border-color: transparent;
+          background: var(--color-gray-300);
+          // box-shadow: 0px 0px 10px 6px rgba(251, 83, 67, 0.7);
+          // -webkit-box-shadow: 0px 0px 10px 6px rgba(251, 83, 67, 0.7);
+          // -moz-box-shadow: 0px 0px 10px 6px rgba(251, 83, 67, 0.7);
           color: white;
         }
       }
