--- a/src/styles/Services.module.scss
+++ b/src/styles/Services.module.scss
@@ -16,6 +16,8 @@
     justify-content: center;
     align-items: center;
     font-size: 3rem;
+    border: 1px solid var(--color-gray-200);
+
     user-select: none;
     @media screen and (max-width: 1250px) {
       width: 150px;
