--- a/src/styles/Footer.module.scss
+++ b/src/styles/Footer.module.scss
@@ -1,5 +1,6 @@
 .footer_outer {
   position: relative;
+  // display: flex;
   z-index: 2;
   padding: 4rem 0;
   border-bottom: 1px solid var(--color-border-dark);
@@ -20,6 +21,10 @@
     gap: 2rem;
     width: 100%;
     padding: 0 4rem;
+
+    @media screen and (max-width: 768px) {
+      flex-direction: column;
+    }
   }
 
   .footer_col {
