--- a/src/styles/FooterExt.module.scss
+++ b/src/styles/FooterExt.module.scss
@@ -12,17 +12,26 @@
     width: 100%;
     padding: 0 4rem;
 
+    @media screen and (max-width: 768px) {
+      flex-direction: column;
+    }
+
     .footer_col {
       display: flex;
       flex-direction: column;
       justify-content: flex-start;
       align-items: flex-start;
       gap: 2rem;
+
       ul {
         list-style: none;
         display: flex;
         flex-wrap: wrap;
         gap: 0.7rem;
+
+        @media screen and (max-width: 768px) {
+          flex-direction: column;
+        }
         li {
           a {
             font-size: 0.7rem;
