--- a/src/styles/Navbar.module.scss
+++ b/src/styles/Navbar.module.scss
@@ -172,7 +172,8 @@
     flex-direction: column;
     li {
       margin-top: 0.8rem;
-      a {
+      a,
+      .topMenu {
         display: flex;
         width: 100%;
         height: 40px;
@@ -181,9 +182,18 @@
         border-bottom: 1px solid var(--color-border-dark);
         color: var(--color-gray-100);
         transition: all ease-in-out 250ms;
+        cursor: pointer;
         &:hover {
           color: var(--color-primary);
         }
+      }
+
+      .subMenu {
+        transition: all ease-in-out 250ms;
+
+        margin-left: 20px;
+        font-size: 0.9rem;
+        border-bottom: none;
       }
     }
   }
