--- a/src/styles/Blogs.module.scss
+++ b/src/styles/Blogs.module.scss
@@ -1,8 +1,8 @@
 .container {
   margin: 0 auto;
   // min-height: calc(100vh - 4rem);
-  width: 100vw;
-  max-width: 60rem;
+  //   width: 100vw;
+  //   max-width: 60rem;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -14,8 +14,9 @@
     align-items: center;
     justify-content: center;
     gap: 2.5rem;
-    width: 100vw;
-    max-width: 65rem;
+    width: 100%;
+    // background: green;
+    // max-width: 65rem;
     flex-wrap: wrap;
 
     .worksImg {
