--- a/src/app/blog/cybersecurity-best-practices-for-small-businesses/page.module.scss
+++ b/src/app/blog/cybersecurity-best-practices-for-small-businesses/page.module.scss
@@ -8,13 +8,25 @@
   line-height: 2rem;
   text-align: justify;
   margin: 0 auto;
-
+  @media screen and (max-width: 1000px) {
+    max-width: 80%;
+  }
+  @media screen and (max-width: 770px) {
+    max-width: 90%;
+    text-align: left;
+  }
   .postImage {
     width: 100%;
-    height: 400px;
+    height: 25rem;
     // background-position: bottom;
     // background-size: contain;
     margin: 2rem;
+    @media screen and (max-width: 1000px) {
+      height: 20rem;
+    }
+    @media screen and (max-width: 770px) {
+      height: 15rem;
+    }
   }
   h2 {
     margin-top: 2rem;
