--- a/src/styles/Blogs.module.scss
+++ b/src/styles/Blogs.module.scss
@@ -130,7 +130,7 @@
   padding: 0.75rem 1rem;
 }
 
-.cardText > h5 {
+.cardText > a {
   font-weight: 400;
   font-size: 0.8rem;
   color: var(--color-gray-100);
